INCLUDES=-I$(top_srcdir)/include $(Corona_CFLAGS)
pkgincludedir=$(prefix)/include/CEGUI/ImageCodecModules/CoronaImageCodec

noinst_LTLIBRARIES=libCEGUICoronaImageCodec.la
libCEGUICoronaImageCodec_la_SOURCES = CEGUICoronaImageCodec.cpp
libCEGUICoronaImageCodec_la_LDFLAGS = $(Corona_LIBS)
noinst_HEADERS = CEGUICoronaImageCodec.h

