INCLUDES=-I$(top_srcdir)/include $(FreeImage_CFLAGS)
pkgincludedir=$(prefix)/include/CEGUI/ImageCodecModules/FreeImageImageCodec

noinst_LTLIBRARIES=libCEGUIFreeImageImageCodec.la
libCEGUIFreeImageImageCodec_la_SOURCES = CEGUIFreeImageImageCodec.cpp
libCEGUIFreeImageImageCodec_la_LDFLAGS = $(FreeImage_LIBS)
noinst_HEADERS = CEGUIFreeImageImageCodec.h

