INCLUDES=-I$(top_srcdir)/include $(SILLY_CFLAGS)
pkgincludedir=$(prefix)/include/CEGUI/ImageCodecModules/SILLYImageCodec

noinst_LTLIBRARIES=libCEGUISILLYImageCodec.la
libCEGUISILLYImageCodec_la_SOURCES = CEGUISILLYImageCodec.cpp
libCEGUISILLYImageCodec_la_LDFLAGS = $(SILLY_LIBS)
noinst_HEADERS = CEGUISILLYImageCodec.h

