INCLUDES=-I$(top_srcdir)/include $(SILLY_CFLAGS)
pkgincludedir=$(prefix)/include/CEGUI/ImageCodecModules/SILLYImageCodec

lib_LTLIBRARIES=libCEGUISILLYImageCodec.la
libCEGUISILLYImageCodec_la_SOURCES = CEGUISILLYImageCodec.cpp CEGUISILLYImageCodecModule.cpp 
libCEGUISILLYImageCodec_la_LIBADD = $(SILLY_LIBS)
pkginclude_HEADERS = CEGUISILLYImageCodec.h CEGUISILLYImageCodecModule.h

