INCLUDES=-I$(top_srcdir)/include 
pkgincludedir=$(prefix)/include/CEGUI/ImageCodecModules/TGAImageCodec

lib_LTLIBRARIES=libCEGUITGAImageCodec.la
libCEGUITGAImageCodec_la_SOURCES = CEGUITGAImageCodec.cpp CEGUITGAImageCodecModule.cpp
pkginclude_HEADERS = CEGUITGAImageCodec.h CEGUITGAImageCodecModule.h 



