EXTRA_DIST = CEGUIDirect3D10GeometryBuffer.cpp \
             CEGUIDirect3D10GeometryBuffer.h \
             CEGUIDirect3D10Renderer.cpp \
             CEGUIDirect3D10Renderer.h \
             CEGUIDirect3D10RendererShader.txt \
             CEGUIDirect3D10RenderTarget.cpp \
             CEGUIDirect3D10RenderTarget.h \
             CEGUIDirect3D10Texture.cpp \
             CEGUIDirect3D10Texture.h \
             CEGUIDirect3D10TextureTarget.cpp \
             CEGUIDirect3D10TextureTarget.h \
             CEGUIDirect3D10ViewportTarget.cpp \
             CEGUIDirect3D10ViewportTarget.h
