EXTRA_DIST = CEGUIDirect3D9GeometryBuffer.cpp \
             CEGUIDirect3D9GeometryBuffer.h \
             CEGUIDirect3D9Renderer.cpp \
             CEGUIDirect3D9Renderer.h \
             CEGUIDirect3D9RenderTarget.cpp \
             CEGUIDirect3D9RenderTarget.h \
             CEGUIDirect3D9Texture.cpp \
             CEGUIDirect3D9Texture.h \
             CEGUIDirect3D9TextureTarget.cpp \
             CEGUIDirect3D9TextureTarget.h \
             CEGUIDirect3D9ViewportTarget.cpp \
             CEGUIDirect3D9ViewportTarget.h
